26/05/2020
-----------
+ Started libc
+ Started ansi escape characters support
+ Better Makefile

02/05/2020
-----------
+ scrolling terminal
+ sleep function in asm (not functional)