@@ -17,15 +17,19 @@ KERNEL_HDRS = kernel/hdrs/
 
 LIBC_HDRS = libc/hdrs/
 
-CC = i386-elf-gcc
+CC = i686-elf-gcc
 
-CFLAGS = -std=gnu99 -ffreestanding -g -c -I ${KERNEL_HDRS} -I ${LIBC_HDRS}
+CFLAGS = -std=gnu99 -ffreestanding -g -c -I ${KERNEL_HDRS} -I ${LIBC_HDRS} -W -Wall -Wextra -Werror
 
 LD_FLAGS = -ffreestanding -nostdlib -g -T $(LINKER_DIR)/linker.ld
 
-NAME = build/kernel.elf
+OUT_DIR = build
+
+NAME = $(OUT_DIR)/kernel.elf
 
 RM = rm -rf
+
+MKDIR_P = mkdir -p
 
 ## SRC ################################
 
@@ -36,7 +40,11 @@ KERNEL_SRC = $(KERNEL_SRC_DIR)/kernel.c \
 			$(KERNEL_SRC_DIR)/tty.c	\
 			$(KERNEL_SRC_DIR)/ansi.c
 
-LIBC_SRC = $(LIBC_SRC_DIR)/string/strlen.c
+LIBC_SRC = $(LIBC_SRC_DIR)/string/strlen.c \
+			$(LIBC_SRC_DIR)/stdio/printf.c \
+			$(LIBC_SRC_DIR)/stdio/putchar.c \
+			$(LIBC_SRC_DIR)/stdio/puts.c \
+			$(LIBC_SRC_DIR)/stdio/putnbr.c
 
 OBJ = $(KERNEL_SRC:.c=.o) \
 	$(KERNEL_ASM:.s=.o) \
@@ -44,10 +52,10 @@ OBJ = $(KERNEL_SRC:.c=.o) \
 
 ## MAKE RULES #########################
 
+all:	build_dir $(NAME)
+
 $(NAME):	$(OBJ)
 	$(CC) $(LD_FLAGS) $(OBJ) -o $(NAME) -lgcc
-
-all:	$(NAME)
 
 %.o : %.s
 	$(CC) $(CFLAGS) $< -o $@
@@ -62,5 +70,8 @@ fclean: clean
 	$(RM) $(NAME)
 
 re: fclean all
+
+build_dir:
+	$(MKDIR_P) $(OUT_DIR)
 
 .PHONY: all run clean fclean re
