@@ -1,0 +1,13 @@
+/**
+ * Author: RomainGsd
+ * Date: 28/05/2020
+*/
+
+#pragma once
+
+#include "kernel.h"
+
+int printf(const char *format, ...);
+int putchar(const int ic);
+int puts(const char *str);
+int putnbr(int nb);
