@@ -8,4 +8,4 @@
 #include <stddef.h>
 #include <stdint.h>
 
-extern size_t	strlen(const char *str);
+size_t	strlen(const char *str);
