@@ -1,3 +1,8 @@
+28/05/2020
+-----------
++ Started printf
++ putchar, puts
+
 26/05/2020
 -----------
 + Started libc
